try to fix bug on mobile: unexpected seperation between page

--- a/Resources/Style/MainPage.css
+++ b/Resources/Style/MainPage.css
@@ -59,12 +59,12 @@ body{
 	--web-view-id: MainPage;
 	--web-enable-deep-linking: true;
 }
-#Background{
+#Background_Home{
 	visibility: hidden;
 	opacity: 0.95;
 	position: absolute;
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+	height: 100vh;
 }
 #Background_Watch{
 	visibility: hidden;
